--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -8,7 +8,7 @@
   text-align: center;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
-.submit button{
+.newExpense  button{
   font: inherit;
 cursor: pointer;
 padding: 1rem 2rem;
@@ -19,19 +19,19 @@ border-radius: 12px;
 margin-right: 1rem;
 }
 
-.submit button:hover,
-.submit button:active {
+.newExpense  button:hover,
+.newExpense  button:active {
 background-color: #510674;
 border-color: #510674;
 }
 
-.submit button.alternative {
+.newExpense  button.alternative {
 color: #220131;
 border-color: transparent;
 background-color: transparent;
 }
 
-.submit button.alternative:hover,
-.submit button.alternative:active {
+.newExpense  button.alternative:hover,
+.newExpense  button.alternative:active {
 background-color: #ddb3f8;
 }
