--- a/src/components/Expense/expenses.css
+++ b/src/components/Expense/expenses.css
@@ -7,4 +7,8 @@
     max-width: 95%;
     background-color: black;
     box-shadow: 0 1px 8px rgba(0,0,0,0.25);
+    color: white;
+}
+.filter-container>p{
+    text-align: center;
 }
